# web-scraping

./: README.md  pyproject.toml  sandbox.ipynb
tests/: test_scraper.py
