[tool.poetry]
name = "webscraping"
version = "0.1.0"
description = ""
authors = ["BEN <benjamin.hill28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.0.7"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
